# yogateacherinsurance.quest

./: claude.md  package-lock.json  package.json  plan.md  tsconfig.json
agent/: pyproject.toml
agent/src/: __init__.py  agent.py
app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  manifest.ts  page.tsx  sitemap.ts
app/aerial-yoga-insurance/: page.tsx
app/api/copilotkit/: route.ts
app/api/hume-token/: route.ts
app/api/zep/: route.ts
app/articles/hot-yoga-insurance-coverage/: page.tsx
app/balens-yoga-teacher-insurance/: page.tsx
app/best-yoga-teacher-insurance-providers/: page.tsx
app/best-yoga-teacher-insurance-uk/: page.tsx
app/compare-yoga-teacher-insurance-uk/: page.tsx
app/do-you-need-yoga-teacher-insurance/: page.tsx
app/fitness-instructor-insurance-uk/: page.tsx
app/group-fitness-instructor-insurance/: page.tsx
app/hot-yoga-insurance/: page.tsx
app/how-much-yoga-teacher-insurance-cost/: page.tsx
app/meditation-teacher-insurance/: page.tsx
app/pilates-instructor-insurance/: page.tsx
app/profile/: page.tsx
app/public-liability-insurance-yoga-teachers/: page.tsx
app/trainee-yoga-teacher-insurance/: page.tsx
app/yoga-alliance-insurance-uk/: page.tsx
app/yoga-instructor-insurance-uk/: page.tsx
app/yoga-studio-insurance/: page.tsx
app/yoga-teacher-liability-insurance/: page.tsx
app/yoga-teacher-training-insurance/: page.tsx
components/: DebugPanel.tsx  Disclaimer.tsx  FloatingVoice.tsx  Footer.tsx  Navigation.tsx  VoiceWidget.tsx  Yoga3DFigure.tsx  providers.tsx
lib/auth/: server.ts
public/: site.webmanifest
(+8 files in other folders)
