[project]
name = "yoga-insurance-agent"
version = "0.1.0"
description = "CopilotKit + Pydantic AI agent for Yoga Teacher Insurance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn",
    "fastapi",
    "starlette",
    "pydantic-ai-slim[ag-ui]",
    "pydantic-ai-slim[google]",
    "python-dotenv",
    "psycopg2-binary",
    "httpx",
]
